# space-wrapper

./: .ammanrc.js  Anchor.toml  README.md  package.json  wallet.json
programs/space-wrapper/: Cargo.toml
programs/space-wrapper/src/: error.rs  lib.rs
programs/space-wrapper/src/instructions/: create_proxy_authority.rs  delegate_proxy_authority.rs  mod.rs  proxy_create_master_edition_v3.rs  proxy_create_metadata_v3.rs  proxy_update_create_metadata_v3.rs  undelegate_proxy_authority.rs
programs/space-wrapper/src/state/: creator.rs  mod.rs  proxy_authority.rs
programs/space-wrapper/src/utils/: is_authorized.rs  mod.rs
programs/space-wrapper/utils/: pda.ts
tests/: space-wrapper.ts
